--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,108 @@
-.App {
+.header-color, .landing-grid {
+background: #833ab4;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.landing-grid{
   text-align: center;
+  position: fixed;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.projects-grid{
+  display:flex;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+/* Contact Page */
+.contact-body{
+  margin:auto;
+  position: fixed;
+  width: 100%;
+  height: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top: 2em;
 }
 
-.App-link {
-  color: #61dafb;
+.contact-grid{
+  text-align: center;
+  justify-content: center;
+  width: 80%;
+  height: 550px;
+  background:#fff;
+  color:black;
+  margin-bottom: 20px; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.contact-grid h2{
+  font-family: 'anton', sans-serif;
+}
+
+.contact-grid p{
+  font-family: 'oxygen', sans-serif;
+  font-weight: bold;
+}
+
+.contact-grid hr{
+  border-top: 5px dotted black;
+  width: 50%;
+  margin: auto;
+}
+
+.contact-list i{
+  font-size: 66px;
+  padding-right: 5rem;
+}
+
+.resume-right-col{
+  background-color: #27221f;
+  color:#fff;
+  padding:2em;
+}
+
+.avatar-image {
+ width:250px;
+ border-radius: 50%;
+ margin-top:5em; 
+ -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+ filter: grayscale(100%);
+}
+
+.banner-text{
+  background-color:black;
+  opacity: .8;
+  width: 75%;
+  margin: auto;
+  border-radius: 10px;
+}
+.banner-text h1 {
+  font-size: 66px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.banner-text hr{
+  border-top: 5px dotted #fff;
+  width: 50%;
+  margin: auto;
+}
+
+.banner-text p {
+  color: #fff;
+  font-size: 20px;
+  padding: 1em;
+}
+
+.social-links{
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin:auto;
+}
+.social-links i {
+  color:#fff;
+  font-size: 5em;
+  padding: 8px;
 }
